Fix layout issues

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -10,20 +10,19 @@ body{
 
 #body-home{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
+    overflow: scroll;
+    grid-template-columns: 0.18fr 1fr 1fr 1fr 1fr 0.18fr;
+    grid-template-rows: auto auto auto 330px;
     height: 100vh;
     grid-template-areas: 
-    'header header header header'
-    'hero hero hero hero'
-    'hero-img hero-img hero-img hero-img'
-    'nav nav nav nav';  
+    '. header header header header .'
+    '. hero hero hero hero .'
+    '. hero-img hero-img hero-img hero-img .'
+    '. nav nav nav nav .';  
 }
 
-header{
+.header{
   grid-area: header;
-  margin-left: 60px;
-  margin-right: 60px;
   display: flex;
   position: relative;
   justify-content: space-between;
@@ -63,15 +62,12 @@ p{
 
 .hero{
   grid-area: hero;
-  margin-left: 60px;
-  margin-right: 60px;
   margin-top: 10px;
+
 }
 
 .hero-img{
   grid-area: hero-img;
-  margin-left: 60px;
-  margin-right: 60px;
   margin-bottom: 10px;
   background-size:cover;
   background-repeat: no-repeat;
@@ -79,6 +75,7 @@ p{
 
 .image{
   width: 100%;
+  max-height: 50vh;
 }
 
 .hero-title{
@@ -93,44 +90,45 @@ p{
 
 .nav{
   grid-area: nav;
-  margin-left: 60px;
-  margin-right: 60px;
+  height: 100%;
 }
 
 .nav__list{
   list-style: none;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-areas:
-  'nav item';
+  display: flex;
+  height: 100%;
   margin: 0;
   padding: 0;
-
 }
 
 .nav__item{
-  grid-area: nav item;
-  display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  display: grid;
   align-items: center;
   justify-content: center;
-  height: 300px;
+  
 }
 
 #training{
   background-color: rgb(248, 213,72);
+  width: 25%;
 }
 
 #about{
   background-color: rgb(147, 206,240);
+  width: 25%;
 }
 
 #kontakt{
   background-color: rgb(158, 189,58);
+  width: 25%;
 }
 
 #infos{
   background-color: rgb(236, 177,61);
+  width: 25%;
 }
 
 .nav__link{
@@ -139,4 +137,99 @@ p{
   font-family: "Roboto", sans-serif;
   font-size: 2.5rem;
 }
+
+/* @media (max-width: 600px) {
+
+  #body-home{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto;
+    height: 100vh;
+    grid-template-areas: 
+    'header header'
+    'hero hero'
+    'hero-img hero-img'
+    'nav nav'
+    'nav nav';  
+}
+
+  header{
+    margin-left: 40px;
+    margin-right: 40px;
+    border: red solid 2px;
+
+  }
+  
+  header::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 85%;
+    right: 0%;
+  
+  }
+  
+  #logo{
+    width: auto;
+    height: 10vh; 
+    z-index: 1000;
+    margin-bottom: -15px;
+  }
+  
+  .header-info{
+    font-size: 0.8rem;
+  }
+  
+  p{
+    margin-bottom: 5px;
+  }
+  
+  .hero{
+    grid-area: hero;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 0px;
+    border: blue solid 2px;
+  
+  }
+  
+  .hero-img{
+    grid-area: hero-img;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    border: green solid 2px;
+  }
+  
+  .image{
+    max-width: 100%;
+    max-height: 30vh;
+  }
+  
+  .hero-title{
+    font-size: 2rem;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    border: orange solid 2px;
+  }
+  
+  .nav{
+    grid-area: nav;
+    margin-left: 40px;
+    margin-right: 40px;
+    border: pink solid 2px;
+  }
+  
+  .nav__list{
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 248px;
+  }
+  
+  .nav__link{
+    font-size: 1.8rem;
+  }
+
+
+} */
 
